ui: spacing correction

--- a/public/frontend/mylist.css
+++ b/public/frontend/mylist.css
@@ -133,15 +133,6 @@ background: #BD235E;
     }
 }
 
-#vue {
-    padding-left: 20px;
-    padding-right: 60px;
-}
-
-#youtube-vue {
-    padding-right: 60px;
-}
-
 .delete-playlist-button-container {
     text-align: center;
 }
